# boring-ui

./: .dockerignore  .gitignore  .gitmodules  .impeccable.md  .stylelintrc.cjs  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  Dockerfile.local-apps  LICENSE  README.md  TODO.ask-user-review.md  app.config.js  app.full.toml  boring.app.toml  data-explorer-root-plugin-pr.md  docker-compose.local-apps.yml  drizzle.config.ts  false  index.html  package-lock.json  package.json  playwright.config.js  playwright.smoke.config.js  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  smoke-git-1773675271.txt  smoke-git-1774451901.txt  tmp-dom-menu.mjs  tmp-keytest-custom.mjs  tmp-keytest-enter.mjs  tmp-keytest.mjs  tmp-publish-dashboard-packages.sh  tmp-screenshot-menu.mjs  tmp-screenshot.mjs  tsconfig.server.json  vite.config.ts  vitest.config.server.ts  (+2 more)
.beads/: config.yaml  issues.jsonl
.github/: dependabot.yml  dependency-age-exceptions.json
.planning/: chat-centered-migration-plan.md  chat-centered-ux-redesign.md  chat-interface-cleanup.md  pi-migration-phase-ab.md
.storybook/: main.ts  (+3 more)
apps/boring-macro-v2/src/plugins/macro/server/sdk/: pyproject.toml
apps/boring-macro-v2/src/plugins/macro/server/sdk/boring_macro/: __init__.py  _cli.py
apps/boring-macro-v2/src/plugins/macro/server/sdk/boring_macro/transforms/: __init__.py
apps/boring-macro-v2/src/plugins/macro/server/sdk/boring_macro/transforms/builtins/: __init__.py  diff.py  moving_average.py  yoy.py
apps/full-app/src/plugins/demo/sdk/: pyproject.toml
apps/full-app/src/plugins/demo/sdk/boring_demo/: _cli.py
(+2914 files in other folders)
