[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "boring-macro-sdk"
version = "0.1.0"
description = "Python SDK for the boring.macro API"
requires-python = ">=3.9"
dependencies = ["pandas", "requests"]

[project.scripts]
bm = "boring_macro._cli:main"

[tool.setuptools.packages.find]
where = ["."]
